8230611: infinite loop in LogOutputList::wait_until_no_readers()

Add copy constructor and copy assignment operator to ensure reader count remains accurate

Reviewed-by: kbarrett, dholmes